syntax = "proto3";

package intouchPackage;

service Payment {
    rpc GetAccountBalance (VoidNoParam) returns (Amount);
    rpc CheckTransactionStatus (StatusRequest) returns (StatusResponse);
    rpc CashIn (FinanceRequest) returns (FinanceResponse);
}

message VoidNoParam {}

message Amount {
    double amount = 1;
}

message StatusRequest {
    string id = 1;
}

message StatusResponse {
    bool success = 1;
    string message = 2;
    ProviderResponse providerResponse = 3;
}

message FinanceRequest {
    string payerPhone = 1;
    double amount = 2;
    string id = 3;
    string callbackUrl = 4;
}

message FinanceResponse {
    bool success = 1;
    string message = 2;
    ProviderResponse providerResponse = 3;
}

message ProviderResponse {
    int32 code = 1;
    string status = 2;
    string financialTransactionId = 3;
    string amount = 4;
    string externalId = 5;
    string message = 6;
    string payToken = 9;
}